@@ -106,6 +106,7 @@ String::Template                               = 0.19
 Term::EditLine                                 = 0.09
 Test::Alien                                    = 0.04
 Test::CChecker                                 = 0.07
+Test::Clustericious::Blocking                  = 0.02
 Test::Clustericious::Cluster                   = 0.29
 Test::Exec                                     = 0.02
 Test::Fixme                                    = 0.15
